--- a/SuperMyLine/SuperMyLine.csproj
+++ b/SuperMyLine/SuperMyLine.csproj
@@ -45,9 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Grafic.cs" />
     <Compile Include="Lojja.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Program.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperMegaLojja.cs">
       <SubType>Form</SubType>
